Updated swagger for deployment
